# Bead

./: .appveyor.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/calculator/: CMakeLists.txt  calculator.xml  main.cpp
examples/hello/: CMakeLists.txt  hello.xml  main.cpp
scripts/: .run.tests.sh.swp  run.tests.sh  ubuntu.build.sh
simulator/: CMakeLists.txt  SdlRenderer.cpp  SdlRenderer.hpp  Simulator.cpp
src/: CMakeLists.txt  Event.hpp  Layout.hpp  Property.hpp  Renderer.hpp  ReturnType.hpp  Singleton.hpp  UiGenerator.cpp  UiGenerator.hpp  View.cpp  View.hpp  Xml.cpp  Xml.hpp
src/view/: View.cpp
tests/: CMakeLists.txt
tests/UiGenerator/: CMakeLists.txt  app00.xml  main.cpp
